Changing Reviews layout and fixing Sidebar Menu SVG and title shrinking/wrapping

--- a/TCSA.V2/wwwroot/tailwind.css
+++ b/TCSA.V2/wwwroot/tailwind.css
@@ -589,10 +589,6 @@ a {
   margin-top: 1rem;
 }
 
-.tw-mt-2 {
-  margin-top: 0.5rem;
-}
-
 .tw-inline {
   display: inline;
 }
@@ -617,6 +613,18 @@ a {
   width: 96px;
 }
 
+.tw-w-full {
+  width: 100%;
+}
+
+.tw-w-\[50px\] {
+  width: 50px;
+}
+
+.tw-flex-1 {
+  flex: 1 1 0%;
+}
+
 .tw-flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -633,8 +641,16 @@ a {
   align-items: center;
 }
 
+.tw-justify-end {
+  justify-content: flex-end;
+}
+
 .tw-justify-center {
   justify-content: center;
+}
+
+.tw-justify-between {
+  justify-content: space-between;
 }
 
 .tw-gap-1 {
@@ -657,8 +673,8 @@ a {
   gap: 1.5rem;
 }
 
-.tw-p-4 {
-  padding: 1rem;
+.tw-whitespace-nowrap {
+  white-space: nowrap;
 }
 
 .tw-p-1 {
@@ -669,23 +685,54 @@ a {
   padding: 0.5rem;
 }
 
+.tw-p-4 {
+  padding: 1rem;
+}
+
 .tw-text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
 }
 
-@media (min-width: 992px) {
-  .md\:tw-ml-\[140px\] {
-    margin-left: 140px;
-  }
+.tw-font-bold {
+  font-weight: 700;
+}
 
+@media (min-width: 992px) {
   .md\:tw-ml-\[80px\] {
     margin-left: 80px;
+  }
+
+  .md\:tw-w-\[40px\] {
+    width: 40px;
+  }
+
+  .md\:tw-text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
 @media (min-width: 1400px) {
   .lg\:tw-ml-\[250px\] {
     margin-left: 250px;
+  }
+
+  .lg\:tw-w-\[50px\] {
+    width: 50px;
+  }
+
+  .lg\:tw-w-\[40px\] {
+    width: 40px;
+  }
+
+  .lg\:tw-text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:tw-text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
